--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -25,8 +25,8 @@ html { height: 100%; }
 
 body {
   color: black;
-  font-family: monospace;
-  font-size: 16px;
+  font-family: roboto;
+  font-size: 19px;
   line-height: 1.4;
   margin: 0;
   min-height: 100%;
